[package]
name = "pochita"
version = "0.1.3"
edition = "2021"
description = "A allocation arena for Rust."
license = "MIT/Apache-2.0"
repository = "https://github.com/nikoraefu/pochita"
categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["arena"]

[features]
smallvec = ["dep:smallvec"]

[dependencies]
smallvec = { version = "1.10.0", features = ["union"], optional = true }
sptr = "0.3"
